--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -15,5 +15,11 @@ jobs:
           pip install -r requirements.txt
           python train.py
           
-          echo "Model Metrics"
-          cat metrics.txt
+          echo "## Model Metrics" > report.md
+          cat metrics.txt >> report.md
+          
+          echo "## Data Viz" >>report.md
+          cat-publish feature-importance.png --md >> report.md
+          cat-publish residuals.png --md >>report.md
+          cml-send-comment report.md
+          
