--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -10,16 +10,16 @@ jobs:
         env:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
-
           # Your ML workflow goes here
           pip install -r requirements.txt
           python train.py
           
-          echo "## Model Metrics" > report.md
+          echo "## Model metrics" > report.md
           cat metrics.txt >> report.md
           
-          echo "## Data Viz" >>report.md
-          cat-publish feature-importance.png --md >> report.md
-          cat-publish residuals.png --md >>report.md
+          echo "## Data viz" >> report.md
+          cml-publish feature_importance.png --md >> report.md
+          cml-publish residuals.png --md >> report.md
+          
           cml-send-comment report.md
           
